fixed footer spacing

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -1246,8 +1246,7 @@ footer p {
     }
 
 	.branding {
-        margin-top: 50px;
-        padding-top: 100px;
+        padding-top: 40px;
     }
     
     .brnd {
